# blazor-agile-board

./: .gitattributes  .gitignore  05-Session-Plan-REVISED.md  05-Session-Plan.md  10-Session-Plan-Production.md  10-Session-Plan.md  10-Teaching-Plan.md  10.05-Session-Plan.md  10.1-Session-Plan.md  10.2-Session-Plan.md  10.3-Session-Plan.md  CHANGELOG.md  CLAUDE.md  CLAUDE_FUCKED_UP.md  CRITICAL_OPERATING_CONSTRAINTS.md  Cargo.toml  INVESTIGATE_BROADCAST_ERROR.md  PM_FEATURE_REQUEST.md  PROJECT_STATE.md  ProjectManager.md  README.md  RECOVERY.md  RustTips.md  SESSION-20-PLAN.md  STANDALONE_WORKFLOW.md  TODO.md  data.json  drag-and-drop-fix-prompt.md  get-is-fucked.md  install.ps1  install.sh  justfile  notes.md  pm  pm.bat  update_sessions_prompts.md
backend/: .gitignore  Cargo.toml  config.example.toml
backend/.sqlx/: query-01c2acf15bbba8197fadb81fabf81e7d1340825deaa0e1e539d8c4a1fe9bd376.json  query-0c9c6d8cbdc6147fb1283a77f47771e7b994eef0eb7f51373c9eebf62acd57d8.json  query-210f912f90ca2ca1986d3c4c1802af8d4b10d06ffaa8cd81e4fe6f003812dfcf.json  query-2656f8958cc36b15d2b5b25a1b33d3fcc2a558cdb0a0235434c848a06f5f1241.json  query-3091b608a101a56d5dfabf70dd9feff01744de8f1bde5526d0eb5851b0e67faa.json  query-32c385a283ba691d2ef29c9e2c08018eda0cfadfc880352fb72e490fcb3dde86.json  query-480b3dee88b573d5e6ba1517ceabb95a6a24774c43353074861a04bfc3364bc7.json  query-707e3fe16b6cc718eb72ef356f358e65c3cf0974609911793d1f3b4df9e845aa.json  query-7556fa8cbce7179709faaafbf56c6e898f124535051922366042642d54fd2c13.json  query-80240b7ca5fc1db6f89d9107330f0d198f0d542ed8e2f06c83437da5242680e9.json  query-839427e703c06f4000074d66a210656a261cc02217e8e18e7483a77618411cf6.json  query-896a9ea4f9317028ff04cf398efae2d6ba2415f5bfa4f7c7566c2e407dc6d049.json  query-898df59934d8769b1b3efb35d541c0f3f6867794e9faafdde75f5765e4bb143c.json  query-a9b437f30762b6235bc20e28f625d657bbfc435913876f3d961c479ccb92e964.json  query-b55523ed8e64b10d2e09e5aca1a6380ad206b0a83e1ef69dd1295bc12efbcad4.json  query-b77eee408fea7db3bbcc460defdc87d2e7b20e7e75efefa3a9d5af4869dd2699.json  query-c0d716ce1f27b7f84a3ac1fd1a1acf3876a79839a8a689619b7a589a0b71662d.json  query-ca05363641f1ada741691415279680d6d5c6016711b9799ca985bf76c9ebc4b0.json  query-dd46ee1a9907edb53fb14a19411399d4e0e95ee8a80036d8abad9e4789cedc06.json
backend/crates/pm-auth/: Cargo.toml
backend/crates/pm-auth/src/: claims.rs  connection_rate_limiter.rs  error.rs  jwt_algorithm.rs  jwt_validator.rs  lib.rs  rate_limit_config.rs  rate_limiter_factory.rs  tenant_context.rs
backend/crates/pm-cli/: Cargo.toml  README.md  SKILL.md  sample-cli-commands.md
backend/crates/pm-cli/src/: cli.rs  commands.rs  comment_commands.rs  dependency_commands.rs  lib.rs  main.rs  project_commands.rs  sprint_commands.rs  swim_lane_commands.rs  sync_commands.rs  time_entry_commands.rs  work_item_commands.rs  work_item_toml.rs
backend/crates/pm-cli/tests/: client_integration_tests.rs
backend/crates/pm-config/: Cargo.toml
backend/crates/pm-config/src/: activity_log_config.rs  api_config.rs  auth_config.rs  circuit_breaker_config.rs  config.rs  database_config.rs  error.rs  handler_config.rs  lib.rs  log_level.rs  logging_config.rs  rate_limit_config.rs  retry_config.rs  server_config.rs  validation_config.rs  websocket_config.rs
backend/crates/pm-core/: Cargo.toml
backend/crates/pm-core/src/: lib.rs
backend/crates/pm-db/: Cargo.toml  README.md
backend/crates/pm-db/.sqlx/: query-0b22eceaffcb9ad66ab0bdd28dfa99baf2e01cef8ed80757963c7e80cd3f91ed.json  query-2355e82873d71190185f6c543ca1533c0273045c3290a26b45ad286ac161bf8e.json  query-2d34bd1604d14a6331bf773d3e573ce1f0a66626197b0827fd67030ef98a4c03.json  query-2f31b777607be6796ac6e66d5d9c706a8854ee9cc3586984b78f98990bbf7934.json  query-3bb2aae35be7685451de5c3b6175ba8146c4b2fcdb8372cd3d56d25bde66aa12.json  query-43e50925ad79abfa5b48ffe003d7e2491b54efbd3cee8db06179220645031838.json  query-4837981b1a1b306378aa093e3b3725af953f2ddff2ee8cce3d92da61ba8be71c.json  query-50ed96dbc32a9d1360b35f2a05b4daba8f8881708a3d578787d05af4ca800e31.json  query-5240b2095b327e85408dd785b4c9d70613dead3f971ab7160a6f509e9d73b7f1.json  query-6a6d19d1ab83a3b5e972dc1a12c70f58d19f15f52a6ae0d1d36110a62399f80f.json  query-77697824a3de4c590841dba0b153934f39c52fa2120d9be10799cdbd2583a0ac.json  query-8dff1baea9a547030eed1d0faf2ca30344612ca6ae44dc5902edd2e8139035e2.json  query-991c023a26508cdf187243c73a7e6ccf555a5c2d15ed3ccfe53931168fefc47f.json  query-ae4f2797d0e7f5de097e6ca933ad4d925a95a18910cf71edd282a9dcbce7267d.json  query-d17b705cda212c579d6197989b7028cb41b01c183759fb986633b605632165f0.json  query-f1641be9a5574535b889fcd59d1201460ae2857a2207c9b97d9b6ef60db1f92e.json
backend/crates/pm-db/migrations/: 20260110000000_create_users.sql  20260110000001_create_work_items.sql  20260110000002_create_sprints.sql  20260110000003_create_comments.sql  20260110000004_create_time_entries.sql  20260110000005_create_dependencies.sql  20260110000006_create_activity_log.sql  20260110000007_create_swim_lanes.sql  20260110000008_create_llm_context.sql  20260110000009_add_version_column.sql  20260110000010_add_project_members.sql  20260110000011_add_idempotency_keys.sql  20260116000001_add_priority_and_story_points.sql  20260119194912_add_work_item_fks.sql  20260121000001_create_projects_table.sql  20260127000001_seed_llm_context.sql  20260202000001_fix_dependency_unique_constraint.sql  20260203000001_add_work_item_numbers.sql
backend/crates/pm-db/src/: error.rs  lib.rs
backend/crates/pm-db/tests/: activity_log_repository_tests.rs  comment_repository_tests.rs  (+7 more)
backend/crates/pm-proto/: Cargo.toml  build.rs
backend/crates/pm-ws/: Cargo.toml
backend/pm-server/: Cargo.toml
backend/pm-server/src/: admin.rs  config.rs  error.rs  health.rs  lib.rs  logger.rs  main.rs  routes.rs
backend/pm-server/tests/: api_comments_tests.rs  api_projects_tests.rs  api_resolve_tests.rs  api_work_items_tests.rs
desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: commands.rs  lib.rs  logging.rs  pm_directory.rs  tray.rs
(+775 files in other folders)
