[workspace]
members = [
    "backend/crates/pm-core",
    "backend/crates/pm-db",
    "backend/crates/pm-auth",
    "backend/crates/pm-proto",
    "backend/crates/pm-ws",
    "backend/crates/pm-config",
    "backend/pm-server",
    "desktop/src-tauri"
]
resolver = "3"

[workspace.dependencies]
axum = { version = "0.8.8", features = ["ws"] }
axum-test = { version = "18.6.0", features = ["ws"] }
bytes = { version = "1.11.0" }
chrono = { version = "0.4.43", features = ["serde"] }
dirs = { version = "6.0.0" }
dotenvy = { version = "0.15.7" }
error-location = { version = "0.1.0" }
fern = { version = "0.7.1", features = ["colored"] }
futures = { version = "0.3.31" }
googletest = { version = "0.14.2" }
governor = { version = "0.10.4" }
http = { version = "1.4.0" }
humantime = { version = "2.3.0" }
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
log = { version = "0.4.29" }
metrics = { version = "0.24.3" }
metrics-exporter-prometheus = { version = "0.18.1" }
prost = { version = "0.14.3" }
prost-build = { version = "0.14.3" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149" }
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "sqlite", "uuid", "chrono"] }
thiserror = { version = "2.0.17" }
tempfile = { version = "3.24.0" }
tokio = { version = "1.49.0", features = ["full"] }
tokio-test = { version = "0.4.5" }
toml = { version = "0.9.8" }
tower = { version = "0.5.3", features = ["timeout", "limit"] }
tower-http = { version = "0.6.8", features = ["cors"] }
tracing = { version = "0.1.44" }
tracing-log = { version = "0.2.0" }
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
uuid = { version = "1.19.0", features = ["v4", "serde"] }


# Workspae
pm-auth = { path = "backend/crates/pm-auth" }
pm-config = { path = "backend/crates/pm-config" }
pm-core = { path = "backend/crates/pm-core" }
pm-db = { path = "backend/crates/pm-db" }
pm-proto = { path = "backend/crates/pm-proto" }
pm-ws = { path = "backend/crates/pm-ws" }
