[workspace]
members = [
    "backend/crates/pm-core",
    "backend/crates/pm-db",
    "backend/crates/pm-auth",
    "backend/crates/pm-proto",
    "backend/crates/pm-ws",
    "backend/crates/pm-config",
    "backend/crates/pm-cli",
    "backend/pm-server",
    "desktop/src-tauri"
]
resolver = "3"

[workspace.package]
version = "0.1.2"
edition = "2024"
license = "MIT"
repository = "https://github.com/TonyMarkham/blazor-agile-board"

[workspace.dependencies]
axum = { version = "0.8.8", features = ["ws"] }
axum-test = { version = "18.7.0", features = ["ws"] }
async-trait = { version = "0.1.89" }
base64 = { version = "0.22.1" }
bytes = { version = "1.11.1" }
chrono = { version = "0.4.43", features = ["serde"] }
clap = { version = "4.5.57", features = ["derive"] }
dirs = { version = "6.0.0" }
dotenvy = { version = "0.15.7" }
error-location = { version = "0.1.0" }
fern = { version = "0.7.1", features = ["colored"] }
futures = { version = "0.3.31" }
googletest = { version = "0.14.2" }
governor = { version = "0.10.4" }
http = { version = "1.4.0" }
http-body-util = { version = "0.1.3" }
humantime = { version = "2.3.0" }
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
libc = { version = "0.2.180" }
log = { version = "0.4.29" }
metrics = { version = "0.24.3" }
metrics-exporter-prometheus = { version = "0.18.1" }
nix = { version = "0.31.1", features = ["signal", "process"] }
proptest = { version = "1.10.0" }
prost = { version = "0.14.3" }
prost-build = { version = "0.14.3" }
reqwest = { version = "0.13.1", default-features = false, features = ["json"] }
rand = { version = "0.9.2" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149" }
serial_test = { version = "3.3.1" }
signal-hook = { version = "0.4.3" }
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "sqlite", "uuid", "chrono"] }
thiserror = { version = "2.0.18" }
tauri = { version = "2.10.2", features = ["tray-icon", "devtools"] }
tauri-build = { version = "2.5.5" }
tauri-plugin-log = { version = "2.8.0" }
tauri-plugin-shell = { version = "2.3.5" }
tauri-plugin-single-instance = { version = "2.3.7" }
tempfile = { version = "3.24.0" }
tokio = { version = "1.49.0", features = ["full"] }
tokio-test = { version = "0.4.5" }
toml = { version = "0.9.8" }
tower = { version = "0.5.3", features = ["timeout", "limit"] }
tower-http = { version = "0.6.8", features = ["cors"] }
tracing = { version = "0.1.44" }
tracing-appender = { version = "0.2.4" }
tracing-log = { version = "0.2.0" }
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
uuid = { version = "1.20.0", features = ["v4", "serde"] }
windows-sys = { version = "0.61.2", features = ["Win32_Foundation", "Win32_System_Threading", "Win32_System_Console"] }
wiremock = { version = "0.6.5" }
zip = { version = "7.3.0", default-features = false, features = ["deflate", "bzip2", "time"] }

# Workspace
pm-auth = { path = "backend/crates/pm-auth" }
pm-config = { path = "backend/crates/pm-config" }
pm-core = { path = "backend/crates/pm-core" }
pm-db = { path = "backend/crates/pm-db" }
pm-proto = { path = "backend/crates/pm-proto" }
pm-ws = { path = "backend/crates/pm-ws" }
pm-server = { path = "backend/pm-server" }

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "s"
panic = "abort"
