[package]
name = "pm-server"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "pm-server"
path = "src/main.rs"

[dependencies]
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
http = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
fern = { workspace = true }
tracing-log = { workspace = true }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
thiserror = { workspace = true }
dotenvy = { workspace = true }
humantime = { workspace = true }
chrono = { workspace = true }

pm-core = { workspace = true }
pm-db = { workspace = true }
pm-auth = { workspace = true }
pm-ws = { workspace = true }
