[package]
name = "pm-server"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "pm-server"
path = "src/main.rs"

[dependencies]
axum = { workspace = true }
chrono = { workspace = true }
dotenvy = { workspace = true }
fern = { workspace = true }
http = { workspace = true }
humantime = { workspace = true }
log = { workspace = true }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing-log = { workspace = true }

pm-config = { workspace = true }
pm-core = { workspace = true }
pm-db = { workspace = true }
pm-auth = { workspace = true }
pm-ws = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
googletest = { workspace = true }
serial_test = { workspace = true }
