[package]
name = "pm-server"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "pm-server"
path = "src/main.rs"

[dependencies]
axum = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
dotenvy = { workspace = true }
error-location = { workspace = true }
fern = { workspace = true }
http = { workspace = true }
http-body-util = { workspace = true }
humantime = { workspace = true }
log = { workspace = true }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
prost = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
signal-hook = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing-log = { workspace = true }
uuid = { workspace = true }

pm-config = { workspace = true }
pm-core = { workspace = true }
pm-db = { workspace = true }
pm-auth = { workspace = true }
pm-ws = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
googletest = { workspace = true }
serial_test = { workspace = true }
