[package]
name = "project-manager"
version = "0.1.0"
description = "Agile project management desktop application"
authors = ["Tony Markham"]
edition = "2024"
rust-version = "1.92.0"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { workspace = true }

[dependencies]
chrono = { workspace = true }
error-location = { workspace = true }
libc = { workspace = true }
log = { workspace = true }
nix = { workspace = true }
reqwest = { workspace = true }
signal-hook = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
toml = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tauri = { workspace = true }
tauri-plugin-shell = { workspace = true }
tauri-plugin-single-instance = { workspace = true }
tauri-plugin-log = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
zip = { workspace = true }

pm-config = { workspace = true }

[target.'cfg(unix)'.dependencies]
nix = { workspace = true }
libc = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows-sys = { workspace = true }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
