[package]
name = "pm-auth"
version = "0.1.0"
edition = "2024"

[dependencies]
jsonwebtoken = { workspace = true }
serde = { workspace = true }
governor = { workspace = true }
thiserror = { workspace = true }
error-location = { workspace = true }
tokio = { workspace = true }

pm-core = { workspace = true }
pm-proto = { workspace = true }

[dev-dependencies]
chrono = { workspace = true }
