[package]
name = "pm-auth"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
jsonwebtoken = { workspace = true }
serde = { workspace = true }
governor = { workspace = true }
thiserror = { workspace = true }
error-location = { workspace = true }
tokio = { workspace = true }

pm-core = { workspace = true }
pm-proto = { workspace = true }

[dev-dependencies]
chrono = { workspace = true }
