[package]
name = "pm-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "pm"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
error-location = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }

pm-config = { workspace = true }

[dev-dependencies]
wiremock = { workspace = true }
