[package]
name = "pm-config"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { workspace = true }
dirs = { workspace = true }
error-location = { workspace = true }
libc = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
googletest = { workspace = true }
serial_test = { workspace = true }
tempfile = { workspace = true }
