[package]
name = "pm-config"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
chrono = { workspace = true }
dirs = { workspace = true }
error-location = { workspace = true }
libc = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
googletest = { workspace = true }
serial_test = { workspace = true }
tempfile = { workspace = true }
