[package]
name = "pm-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
thiserror = { workspace = true }
error-location = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }

pm-proto = { workspace = true }
