[package]
name = "pm-db"
version = "0.1.0"
edition = "2024"

[dependencies]
sqlx = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
error-location = { workspace = true }
tokio = { workspace = true }

pm-core = { workspace = true }

[dev-dependencies]
googletest = { workspace = true }
tempfile = { workspace = true }
