[package]
name = "pm-db"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
sqlx = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
error-location = { workspace = true }
tokio = { workspace = true }

pm-core = { workspace = true }

[dev-dependencies]
googletest = { workspace = true }
