[package]
name = "pm-ws"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { workspace = true }
futures = { workspace = true }
bytes = { workspace = true }
tokio = { workspace = true }
prost = { workspace = true }
thiserror = { workspace = true }
error-location = { workspace = true }
metrics = { workspace = true }
log = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
jsonwebtoken = { workspace = true }
sqlx = { workspace = true }

pm-core = { workspace = true }
pm-proto = { workspace = true }
pm-auth = { workspace = true }
pm-db = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
axum-test = { workspace = true }
googletest = { workspace = true }
