[package]
name = "pm-ws"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { workspace = true }
base64 = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
error-location = { workspace = true }
futures = { workspace = true }
jsonwebtoken = { workspace = true }
log = { workspace = true }
metrics = { workspace = true }
prost = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

pm-core = { workspace = true }
pm-proto = { workspace = true }
pm-auth = { workspace = true }
pm-db = { workspace = true }

[dev-dependencies]
axum-test = { workspace = true }
proptest = { workspace = true }
tokio-test = { workspace = true }
googletest = { workspace = true }
