[package]
name = "pm-ws"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
axum = { workspace = true }
base64 = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
error-location = { workspace = true }
futures = { workspace = true }
jsonwebtoken = { workspace = true }
log = { workspace = true }
metrics = { workspace = true }
prost = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

pm-config = { workspace = true }
pm-core = { workspace = true }
pm-proto = { workspace = true }
pm-auth = { workspace = true }
pm-db = { workspace = true }

[dev-dependencies]
axum-test = { workspace = true }
proptest = { workspace = true }
serial_test = { workspace = true }
